--- a/23.10.02 Final Assignment.ipynb
+++ b/23.10.02 Final Assignment.ipynb
@@ -219,9 +219,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "## Question 1: Use yfinance to Extract Stock Data\n"
+    " Question 1: Use yfinance to Extract Stock Data\n"
    ]
   },
   {
@@ -393,7 +396,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Question 2: Use Webscraping to Extract Tesla Revenue Data\n"
    ]
@@ -414,7 +419,7 @@
    "outputs": [],
    "source": [
     "url = 'https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/labs/project/revenue.htm'\n",
-    "html_data = requests.get(url).text\n"
+    "html_data = requests.get(url).text"
    ]
   },
   {
@@ -434,7 +439,7 @@
    },
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(html_data,'html.parser')\n"
+    "soup = BeautifulSoup(html_data,'html.parser')"
    ]
   },
   {
@@ -465,128 +470,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-04-30</td>\n",
-       "      <td>$1,021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-31</td>\n",
-       "      <td>$2,194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-10-31</td>\n",
-       "      <td>$1,439</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019-07-31</td>\n",
-       "      <td>$1,286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019-04-30</td>\n",
-       "      <td>$1,548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>2006-01-31</td>\n",
-       "      <td>$1,667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>2005-10-31</td>\n",
-       "      <td>$534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>2005-07-31</td>\n",
-       "      <td>$416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>2005-04-30</td>\n",
-       "      <td>$475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>2005-01-31</td>\n",
-       "      <td>$709</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>62 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date Revenue\n",
-       "0   2020-04-30  $1,021\n",
-       "1   2020-01-31  $2,194\n",
-       "2   2019-10-31  $1,439\n",
-       "3   2019-07-31  $1,286\n",
-       "4   2019-04-30  $1,548\n",
-       "..         ...     ...\n",
-       "57  2006-01-31  $1,667\n",
-       "58  2005-10-31    $534\n",
-       "59  2005-07-31    $416\n",
-       "60  2005-04-30    $475\n",
-       "61  2005-01-31    $709\n",
-       "\n",
-       "[62 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tesla_tables = soup.find_all('table')\n",
-    "\n",
     "tesla_revenue = pd.DataFrame(columns=[\"Date\", \"Revenue\"])\n",
     "\n",
     "for row in tesla_tables[1].tbody.find_all(\"tr\"):\n",
@@ -594,9 +485,7 @@
     "    if (col != []):\n",
     "        Date = col[0].text\n",
     "        Revenue = col[1].text\n",
-    "        \n",
-    "        tesla_revenue = tesla_revenue.append({\"Date\":Date, \"Revenue\":Revenue}, ignore_index=True)\n",
-    "tesla_revenue"
+    "        tesla_revenue = tesla_revenue.append({\"Date\":Date, \"Revenue\":Revenue}, ignore_index=True)"
    ]
   },
   {
@@ -623,7 +512,7 @@
     }
    ],
    "source": [
-    "tesla_revenue[\"Revenue\"] = tesla_revenue['Revenue'].str.replace(',|\\$',\"\")\n"
+    "tesla_revenue[\"Revenue\"] = tesla_revenue['Revenue'].str.replace(',|\\$',\"\")"
    ]
   },
   {
@@ -642,8 +531,7 @@
    "outputs": [],
    "source": [
     "tesla_revenue.dropna(inplace=True)\n",
-    "\n",
-    "tesla_revenue = tesla_revenue[tesla_revenue['Revenue'] != \"\"]\n"
+    "tesla_revenue = tesla_revenue[tesla_revenue['Revenue'] != \"\"]"
    ]
   },
   {
@@ -767,207 +655,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Dividends</th>\n",
-       "      <th>Stock Splits</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2002-02-13</th>\n",
-       "      <td>1.620128</td>\n",
-       "      <td>1.693349</td>\n",
-       "      <td>1.603295</td>\n",
-       "      <td>1.691666</td>\n",
-       "      <td>76216000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002-02-14</th>\n",
-       "      <td>1.712707</td>\n",
-       "      <td>1.716073</td>\n",
-       "      <td>1.670626</td>\n",
-       "      <td>1.683250</td>\n",
-       "      <td>11021600</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002-02-15</th>\n",
-       "      <td>1.683250</td>\n",
-       "      <td>1.687458</td>\n",
-       "      <td>1.658002</td>\n",
-       "      <td>1.674834</td>\n",
-       "      <td>8389600</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002-02-19</th>\n",
-       "      <td>1.666418</td>\n",
-       "      <td>1.666418</td>\n",
-       "      <td>1.578047</td>\n",
-       "      <td>1.607504</td>\n",
-       "      <td>7410400</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002-02-20</th>\n",
-       "      <td>1.615920</td>\n",
-       "      <td>1.662210</td>\n",
-       "      <td>1.603296</td>\n",
-       "      <td>1.662210</td>\n",
-       "      <td>6892800</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-09-26</th>\n",
-       "      <td>17.379999</td>\n",
-       "      <td>17.820000</td>\n",
-       "      <td>16.780001</td>\n",
-       "      <td>16.780001</td>\n",
-       "      <td>2726800</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-09-27</th>\n",
-       "      <td>16.870001</td>\n",
-       "      <td>17.260000</td>\n",
-       "      <td>16.809999</td>\n",
-       "      <td>17.150000</td>\n",
-       "      <td>1681300</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-09-28</th>\n",
-       "      <td>18.020000</td>\n",
-       "      <td>18.100000</td>\n",
-       "      <td>16.440001</td>\n",
-       "      <td>16.840000</td>\n",
-       "      <td>7431900</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-09-29</th>\n",
-       "      <td>17.049999</td>\n",
-       "      <td>17.260000</td>\n",
-       "      <td>16.400000</td>\n",
-       "      <td>16.459999</td>\n",
-       "      <td>3388600</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-10-02</th>\n",
-       "      <td>16.299999</td>\n",
-       "      <td>16.309999</td>\n",
-       "      <td>15.255000</td>\n",
-       "      <td>15.379800</td>\n",
-       "      <td>4629305</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5446 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Open       High        Low      Close    Volume  Dividends  \\\n",
-       "Date                                                                          \n",
-       "2002-02-13   1.620128   1.693349   1.603295   1.691666  76216000        0.0   \n",
-       "2002-02-14   1.712707   1.716073   1.670626   1.683250  11021600        0.0   \n",
-       "2002-02-15   1.683250   1.687458   1.658002   1.674834   8389600        0.0   \n",
-       "2002-02-19   1.666418   1.666418   1.578047   1.607504   7410400        0.0   \n",
-       "2002-02-20   1.615920   1.662210   1.603296   1.662210   6892800        0.0   \n",
-       "...               ...        ...        ...        ...       ...        ...   \n",
-       "2023-09-26  17.379999  17.820000  16.780001  16.780001   2726800        0.0   \n",
-       "2023-09-27  16.870001  17.260000  16.809999  17.150000   1681300        0.0   \n",
-       "2023-09-28  18.020000  18.100000  16.440001  16.840000   7431900        0.0   \n",
-       "2023-09-29  17.049999  17.260000  16.400000  16.459999   3388600        0.0   \n",
-       "2023-10-02  16.299999  16.309999  15.255000  15.379800   4629305        0.0   \n",
-       "\n",
-       "            Stock Splits  \n",
-       "Date                      \n",
-       "2002-02-13           0.0  \n",
-       "2002-02-14           0.0  \n",
-       "2002-02-15           0.0  \n",
-       "2002-02-19           0.0  \n",
-       "2002-02-20           0.0  \n",
-       "...                  ...  \n",
-       "2023-09-26           0.0  \n",
-       "2023-09-27           0.0  \n",
-       "2023-09-28           0.0  \n",
-       "2023-09-29           0.0  \n",
-       "2023-10-02           0.0  \n",
-       "\n",
-       "[5446 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gme_data = gme.history(period = \"max\")\n",
-    "gme_data"
+    "gme_data = gme.history(period = \"max\")"
    ]
   },
   {
@@ -1142,7 +836,7 @@
    },
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(html_data,'html.parser')\n"
+    "soup = BeautifulSoup(html_data,'html.parser')"
    ]
   },
   {
@@ -1174,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 87,
    "metadata": {
     "tags": []
    },
@@ -1183,121 +877,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jupyterlab/conda/envs/python/lib/python3.7/site-packages/ipykernel_launcher.py:14: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  \n"
+      "/home/jupyterlab/conda/envs/python/lib/python3.7/site-packages/ipykernel_launcher.py:12: FutureWarning:\n",
+      "\n",
+      "The default value of regex will change from True to False in a future version.\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-04-30</td>\n",
-       "      <td>1021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-31</td>\n",
-       "      <td>2194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-10-31</td>\n",
-       "      <td>1439</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019-07-31</td>\n",
-       "      <td>1286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019-04-30</td>\n",
-       "      <td>1548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>2006-01-31</td>\n",
-       "      <td>1667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>2005-10-31</td>\n",
-       "      <td>534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>2005-07-31</td>\n",
-       "      <td>416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>2005-04-30</td>\n",
-       "      <td>475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>2005-01-31</td>\n",
-       "      <td>709</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>62 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date Revenue\n",
-       "0   2020-04-30    1021\n",
-       "1   2020-01-31    2194\n",
-       "2   2019-10-31    1439\n",
-       "3   2019-07-31    1286\n",
-       "4   2019-04-30    1548\n",
-       "..         ...     ...\n",
-       "57  2006-01-31    1667\n",
-       "58  2005-10-31     534\n",
-       "59  2005-07-31     416\n",
-       "60  2005-04-30     475\n",
-       "61  2005-01-31     709\n",
-       "\n",
-       "[62 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "gme_tables = soup.find_all('table')\n",
-    "\n",
     "gme_revenue = pd.DataFrame(columns=[\"Date\", \"Revenue\"])\n",
     "\n",
     "for row in tables[1].tbody.find_all(\"tr\"):\n",
@@ -1305,7 +893,6 @@
     "    if (col != []):\n",
     "        Date = col[0].text\n",
     "        Revenue = col[1].text\n",
-    "        \n",
     "        gme_revenue = gme_revenue.append({\"Date\":Date, \"Revenue\":Revenue}, ignore_index=True)\n",
     " \n",
     "# Remove the dollar dign from the revenues column\n",
@@ -1313,9 +900,7 @@
     "\n",
     "# Remove null and empty spaces from the data\n",
     "gme_revenue.dropna(inplace=True)\n",
-    "\n",
-    "gme_revenue = tesla_revenue[tesla_revenue['Revenue'] != \"\"]\n",
-    "gme_revenue"
+    "gme_revenue = tesla_revenue[tesla_revenue['Revenue'] != \"\"]"
    ]
   },
   {
